// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should instantiate with custom props and match snapshot 1`] = `
"{
  "output": {
    "instanceId": {
      "description": "The ID of the created EC2 instance.",
      "value": "mock-instance-id"
    },
    "privateSubnetIds": {
      "description": "The IDs of the private subnets.",
      "value": "mock-private-subnet-1, mock-private-subnet-2"
    },
    "publicSubnetIds": {
      "description": "The IDs of the public subnets.",
      "value": "mock-public-subnet-1, mock-public-subnet-2"
    },
    "securityGroupId": {
      "description": "The ID of the EC2 Security Group.",
      "value": "mock-sg-id"
    },
    "vpcId": {
      "description": "The ID of the main VPC.",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
            "tags": {
              "Environment": "Production",
              "Owner": "CloudTeam",
              "Project": "Phoenix"
            }
          }
        ],
        "region": "us-west-2"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "my-custom-bucket",
        "encrypt": true,
        "key": "staging/TestCustomStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should instantiate with default props and match snapshot 1`] = `
"{
  "output": {
    "instanceId": {
      "description": "The ID of the created EC2 instance.",
      "value": "mock-instance-id"
    },
    "privateSubnetIds": {
      "description": "The IDs of the private subnets.",
      "value": "mock-private-subnet-1, mock-private-subnet-2"
    },
    "publicSubnetIds": {
      "description": "The IDs of the public subnets.",
      "value": "mock-public-subnet-1, mock-public-subnet-2"
    },
    "securityGroupId": {
      "description": "The ID of the EC2 Security Group.",
      "value": "mock-sg-id"
    },
    "vpcId": {
      "description": "The ID of the main VPC.",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
          }
        ],
        "region": "us-west-2"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "iac-rlhf-tf-states",
        "encrypt": true,
        "key": "dev/TestStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;
